[package]
name = "p3get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3"}
indicatif = { version = "0.16", features = ["improved_unicode"] }